kubernetes/manifests/keycloak.yml
# Keycloak deployment

apiVersion: apps/v1
kind: Deployment
metadata:
    name: keycloak-d
    labels:
        app: keycloak
spec:
    selector:
        matchLabels:
            app: keycloak
    minReadySeconds: 3
    template:
        metadata:
            labels:
                app: keycloak
        spec:
            containers:
              - name: keycloak
                image: docker.io/jboss/keycloak:4.8.3.Final
                ports:
                  - containerPort: 8080
                    protocol: TCP
---
# Keycloak service

apiVersion: v1
kind: Service
metadata:
    name: keycloak-s
    labels:
        app: keycloak
spec:
    type: NodePort
    selector:
        app: keycloak
    ports:
      - port: 8080
        name: http
      - port: 443
        name: https
---
# Mysql deployment

apiVersion: apps/v1
kind: Deployment
metadata:
    name: mysql-d
    labels:
        app: mysql
spec:
    selector:
        matchLabels:
            app: mysql
    minReadySeconds: 3
    template:
        metadata:
            labels:
                app: mysql
        spec:
            containers:
              - name: mysql
                image: docker.io/mysql:5
---
# Mysql service

apiVersion: v1
kind: Service
metadata:
    name: mysql-s
    labels:
        app: mysql
spec:
    type: NodePort
    selector:
        app: mysql
    ports:
      - port: 80
        name: http
      - port: 3306
        name: mysql
