kubernetes/manifests/ldap.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: ldap
    labels:
        app: ldap
spec:
    selector:
        matchLabels:
            app: ldap
    minReadySeconds: 3
    template:
        metadata:
            labels:
                app: ldap
        spec:
            containers:
              - name: ldap
                image: osixia/openldap
                args: ["--copy-service"]
                ports:
                  - containerPort: 389
                    protocol: TCP
                  - containerPort: 636
                    protocol: TCP
                volumeMounts:
                  - name: config-vol
                    mountPath: /container/service/slapd/assets/config/bootstrap/ldif/config.ldif
                    subPath: config.ldif

            volumes:
              - name: config-vol
                configMap:
                    name: ldif
          
---
apiVersion: v1
kind: Service
metadata:
    name: ldap
    labels:
        app: ldap
spec:
    #type: NodePort
    selector:
        app: ldap
    ports:
      - port: 389
        #protocol: UDP
        name: ldap
      - port: 636
        #protocol: UDP
        name: ldaps
