kubernetes/manifests/resource.yml
# Resource server deployment

apiVersion: apps/v1
kind: Deployment
metadata:
    name: resource-d
    labels:
        app: resource
spec:
    selector:
        matchLabels:
            app: resource
    minReadySeconds: 3
    template:
        metadata:
            labels:
                app: resource
        spec:
            containers:
              - name: resource
                image: resource-server
                imagePullPolicy: Never
                ports:
                  - containerPort: 9000
                    protocol: TCP
---
# Resource server service

apiVersion: v1
kind: Service
metadata:
    name: resource-s
    labels:
        app: gateway
spec:
    type: NodePort
    selector:
        app: gateway
    ports:
      - port: 9000
        name: http
