kubernetes/manifests/registry.yml
# Simple dep/service that gives information about the requester and itself

apiVersion: apps/v1
kind: Deployment
metadata:
    name: registry
    labels:
        app: registry
spec:
    selector:
        matchLabels:
            app: registry
    minReadySeconds: 3
    template:
        metadata:
            labels:
                app: registry
        spec:
            containers:
              - name: registry
                image: registry:2.5.2
                ports:
                  - containerPort: 5000
                    protocol: TCP
                volumeMounts:
                  - mountPath: /var/lib/registry
                    name: reg-data
            volumes:
              - name: reg-data
                persistentVolumeClaim:
                    claimName: reg-pvc
          


---
apiVersion: v1
kind: Service
metadata:
    name: registry
    labels:
        app: registry
spec:
    #type: NodePort
    selector:
        app: registry
    ports:
      - port: 5000
        name: http

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: reg-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/server-snippet: |
      proxy_ssl_verify off;
spec:
  tls:
  - hosts:
    - reg.gsp.test
    secretName: elk-gsp-tls
  rules:
  - host: reg.gsp.test
    http:
      paths:
        - path: /
          backend:
            serviceName: registry
            servicePort: http
